[gd_scene load_steps=42 format=3 uid="uid://de0pjmcrfoc5m"]

[ext_resource type="Script" uid="uid://nq74hij6o8fv" path="res://scenes/bridge/bridge.gd" id="1_c301t"]
[ext_resource type="Texture2D" uid="uid://d35j2wd643idj" path="res://assets/bridge/bridge-sheet.png" id="2_ll4hc"]
[ext_resource type="Script" uid="uid://cw5ggjrjjcikj" path="res://scripts/upgrades/Upgrade.gd" id="2_xo3fo"]
[ext_resource type="Texture2D" uid="uid://cc64e7rt4tt6v" path="res://assets/bridge/bridge_sheet.png" id="3_v3gq5"]
[ext_resource type="Resource" uid="uid://jhfi5kv16pws" path="res://scripts/upgrades/resourses/attack_upgrade_level_1.tres" id="3_xr3tc"]
[ext_resource type="Resource" uid="uid://ks18yvku3dvg" path="res://scripts/upgrades/resourses/defense_upgrade_level_1.tres" id="4_xo3fo"]
[ext_resource type="PackedScene" uid="uid://b5w5j3y5w5j3y" path="res://scenes/ui/HealthBar.tscn" id="4_xxxxx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jnwta"]
size = Vector2(14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypspu"]
atlas = ExtResource("2_ll4hc")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxli0"]
atlas = ExtResource("2_ll4hc")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kef5d"]
atlas = ExtResource("2_ll4hc")
region = Rect2(0, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hojvn"]
atlas = ExtResource("2_ll4hc")
region = Rect2(0, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3qb0"]
atlas = ExtResource("2_ll4hc")
region = Rect2(0, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr7nq"]
atlas = ExtResource("2_ll4hc")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll4hc"]
atlas = ExtResource("2_ll4hc")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgw5d"]
atlas = ExtResource("2_ll4hc")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aev6b"]
atlas = ExtResource("2_ll4hc")
region = Rect2(0, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxw6f"]
atlas = ExtResource("2_ll4hc")
region = Rect2(0, 896, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hosf0"]
atlas = ExtResource("2_ll4hc")
region = Rect2(0, 1152, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_voav8"]
atlas = ExtResource("2_ll4hc")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jvao"]
atlas = ExtResource("2_ll4hc")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rroy"]
atlas = ExtResource("2_ll4hc")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg145"]
atlas = ExtResource("2_ll4hc")
region = Rect2(128, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfjf5"]
atlas = ExtResource("2_ll4hc")
region = Rect2(128, 896, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_amulg"]
atlas = ExtResource("2_ll4hc")
region = Rect2(128, 1152, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wucmw"]
atlas = ExtResource("2_ll4hc")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnwta"]
atlas = ExtResource("3_v3gq5")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqf5l"]
atlas = ExtResource("3_v3gq5")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0opcs"]
atlas = ExtResource("3_v3gq5")
region = Rect2(128, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo3fo"]
atlas = ExtResource("3_v3gq5")
region = Rect2(128, 1152, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr3tc"]
atlas = ExtResource("3_v3gq5")
region = Rect2(128, 1536, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yduyu"]
atlas = ExtResource("3_v3gq5")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjnkn"]
atlas = ExtResource("3_v3gq5")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxdfo"]
atlas = ExtResource("3_v3gq5")
region = Rect2(0, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1w72"]
atlas = ExtResource("3_v3gq5")
region = Rect2(0, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttjp0"]
atlas = ExtResource("3_v3gq5")
region = Rect2(0, 1408, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_73veu"]
atlas = ExtResource("3_v3gq5")
region = Rect2(0, 1792, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lp6u"]
atlas = ExtResource("3_v3gq5")
region = Rect2(256, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_jgw5d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypspu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxli0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kef5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hojvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3qb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr7nq")
}],
"loop": false,
"name": &"三向",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll4hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgw5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aev6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxw6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hosf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voav8")
}],
"loop": false,
"name": &"二向",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jvao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rroy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg145")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfjf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amulg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wucmw")
}],
"loop": false,
"name": &"单向",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnwta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqf5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0opcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo3fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr3tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yduyu")
}],
"loop": false,
"name": &"四向",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjnkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxdfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1w72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttjp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73veu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lp6u")
}],
"loop": false,
"name": &"拐角",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_greend"]
bg_color = Color(0, 0.956863, 0.0941176, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_bqf5l"]
radius = 100.0

[node name="Bridge" type="StaticBody2D" node_paths=PackedStringArray("health_bar") groups=["bridges"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_c301t")
health_bar = NodePath("HealthBar")
available_upgrades = Array[ExtResource("2_xo3fo")]([ExtResource("3_xr3tc"), ExtResource("4_xo3fo")])

[node name="BlockingShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jnwta")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.125, 0.125)
sprite_frames = SubResource("SpriteFrames_jgw5d")
animation = &"拐角"
autoplay = "四向"
frame = 5
frame_progress = 1.0

[node name="UpLevelSprite2D" type="Sprite2D" parent="."]
position = Vector2(9.536743e-07, 0)
scale = Vector2(0.5, 0.5)

[node name="HealthBar" parent="." instance=ExtResource("4_xxxxx")]
offset_left = -7.0
offset_top = -11.0
offset_right = 49.0
offset_bottom = -3.0
theme_override_styles/fill = SubResource("StyleBoxFlat_greend")

[node name="HurtArea2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea2D"]
shape = SubResource("RectangleShape2D_jnwta")

[node name="HitArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea2D"]
shape = SubResource("CircleShape2D_bqf5l")
debug_color = Color(0.44497895, 0.5837057, 0.37361607, 0.41960785)

[node name="RepairTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]

[connection signal="input_event" from="HurtArea2D" to="." method="_on_hurt_area_2d_input_event"]
[connection signal="mouse_entered" from="HurtArea2D" to="." method="_on_hurt_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="HurtArea2D" to="." method="_on_hurt_area_2d_mouse_exited"]
